<resources>
    <string name="app_name">COVID Stats</string>
    <string name="country">Country</string>
    <string name="go">GO</string>
    <string name="loading">Loading...</string>
    <string name="region">Region</string>
    <string name="subregion">Subregion</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="total_confirmed_cases">Total cases</string>
    <string name="new_confirmed_cases">New cases</string>
    <string name="retry">Retry</string>
    <string name="total_recoveries">Total recoveries</string>
    <string name="new_recoveries">New recoveries</string>
    <string name="total_deaths">Total deaths</string>
    <string name="new_deaths">New deaths</string>
</resources>